# SongFormer

./: .gitignore  pyproject.toml  requirements.txt  setup.py
eval_results/: evaluation_summary.md
pip-build-env-p9jkj0r2/site/: sitecustomize.py
src/SongFormer/: run_eval_pipeline.sh
src/SongFormer/dataset/: __init__.py
src/SongFormer/infer/: infer.py
src/SongFormer/models/: SongFormer.py
src/SongFormer/postprocessing/: __init__.py  functional.py
src/SongFormer/utils/: download_songformbench.py  summarize_results.py
src/songformer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
